--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div id="calc">
         <h3>Calculadora</h3>
         <div id="calc__operations">
-            <div id="calc__operations__previous">123</div>
-            <div id="calc__operations__current">123</div>
+            <div id="calc__operations__previous"></div>
+            <div id="calc__operations__current"></div>
         </div>
         <div id="buttons-container">
             <button>CE</button>
